--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
+	"config": {
+        "vendor-dir": "_app/vendor"
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/xytoki/scf-flight"
+        }
+    ],
     "require": {
-        "mikecao/flight": "^1.3",
-        "firebase/php-jwt": "^5.0",
-        "envms/fluentpdo": "^2.1"
+        "xytoki/scf-flight": "dev-master"
     }
 }
