update scf-flight version

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
-        "xytoki/scf-flight": "dev-master"
+        "xytoki/scf-flight": "dev-master",
+		"mikecao/flight": "^1.3"
     }
 }
