修复composer大小写问题

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {   
-    "name": "xytoki/TCShare",
-    "description": "TCShare",
+    "name": "xytoki/tcshare",
+    "description": "Multicloud directory listing.",
     "version": "2.6.0",
     "type": "project",
 	"config": {
