--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "require": {
         "xytoki/scf-flight": "^0.0.5",
 		"mikecao/flight": "^1.3",
-        "symfony/dotenv": "^5.0"
+        "symfony/dotenv": "^5.0",
+        "symfony/cache": "^5.0"
     }
 }
