--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,11 @@
     "version": "2.6.0",
     "type": "project",
 	"config": {
+        "optimize-autoloader": true,
         "vendor-dir": "_app/vendor"
     },
     "require": {
-        "xytoki/scf-flight": "^0.0.5",
+        "xytoki/scf-flight": "^0.0.6",
 		"mikecao/flight": "^1.3",
         "symfony/dotenv": "^5.0",
         "symfony/cache": "^5.0"
