--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {   
     "name": "xytoki/tcshare",
     "description": "Multicloud directory listing.",
-    "version": "3.1.2",
+    "version": "3.1.3",
     "type": "project",
 	"config": {
         "optimize-autoloader": true,
@@ -19,6 +19,8 @@
 		"mikecao/flight": "^1.3",
         "tarask/onedrive": "^1.1",
         "symfony/dotenv": "^5.0",
-        "symfony/cache": "^5.0"
+        "symfony/cache": "^5.0",
+        "ralouphie/mimey": "^2.1",
+        "guzzlehttp/guzzle": "^6.5"
     }
 }
