--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {   
     "name": "xytoki/tcshare",
     "description": "Multicloud directory listing.",
-    "version": "3.1.8",
+    "version": "3.2.0",
     "type": "project",
 	"config": {
         "optimize-autoloader": true,
@@ -17,6 +17,7 @@
         "symfony/dotenv": "^5.0",
         "symfony/cache": "^5.0",
         "ralouphie/mimey": "^2.1",
-        "guzzlehttp/guzzle": "^6.5"
+        "guzzlehttp/guzzle": "^6.5",
+        "sabre/dav": "^4.1"
     }
 }
